--- a/owncloudApp/src/main/res/values-id/strings.xml
+++ b/owncloudApp/src/main/res/values-id/strings.xml
@@ -93,6 +93,7 @@
   <string name="common_unknown">tidak diketahui</string>
   <string name="common_error_unknown">Kesalahan tidak diketahui</string>
   <string name="common_pending">Tertunda</string>
+  <string name="common_important">Penting</string>
   <string name="about_title">Tentang</string>
   <string name="change_password">Ubah sandi</string>
   <string name="delete_account">Hapus akun</string>
