--- a/owncloudApp/src/main/res/values-ja-rJP/strings.xml
+++ b/owncloudApp/src/main/res/values-ja-rJP/strings.xml
@@ -112,6 +112,7 @@
   <string name="common_unknown">不明</string>
   <string name="common_error_unknown">不明なエラー</string>
   <string name="common_pending">中断</string>
+  <string name="common_important">重要</string>
   <string name="about_title">について</string>
   <string name="change_password">パスワードを変更</string>
   <string name="delete_account">アカウント削除</string>
