--- a/owncloudApp/src/main/res/values-lt-rLT/strings.xml
+++ b/owncloudApp/src/main/res/values-lt-rLT/strings.xml
@@ -124,6 +124,7 @@
   <string name="common_unknown">nežinomas</string>
   <string name="common_error_unknown">Neatpažinta klaida</string>
   <string name="common_pending">Laukiantis</string>
+  <string name="common_important">Svarbūs</string>
   <string name="about_title">Apie</string>
   <string name="change_password">Pakeisti slaptažodį</string>
   <string name="delete_account">Pašalinti paskyrą</string>
