--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -128,6 +128,7 @@
   <string name="common_unknown">desconhecido</string>
   <string name="common_error_unknown">Erro desconhecido</string>
   <string name="common_pending">Pendente</string>
+  <string name="common_important">Importante</string>
   <string name="about_title">Sobre</string>
   <string name="change_password">Alterar senha</string>
   <string name="delete_account">Remover conta</string>
