--- a/owncloudApp/src/main/res/values-da/strings.xml
+++ b/owncloudApp/src/main/res/values-da/strings.xml
@@ -94,6 +94,7 @@
   <string name="common_unknown">ukendt</string>
   <string name="common_error_unknown">Ukendt fejl</string>
   <string name="common_pending">Afventer</string>
+  <string name="common_important">Vigtigt</string>
   <string name="about_title">Om</string>
   <string name="change_password">Skift kodeord</string>
   <string name="delete_account">Fjern konto</string>
