--- a/owncloudApp/src/main/res/values-nl/strings.xml
+++ b/owncloudApp/src/main/res/values-nl/strings.xml
@@ -113,6 +113,7 @@ Download hier: %2$s</string>
   <string name="common_unknown">onbekend</string>
   <string name="common_error_unknown">Onbekende fout</string>
   <string name="common_pending">In behandeling</string>
+  <string name="common_important">Belangrijk</string>
   <string name="about_title">Over</string>
   <string name="change_password">Wijzig wachtwoord</string>
   <string name="delete_account">Account uitloggen</string>
