--- a/owncloudApp/src/main/res/values-tr/strings.xml
+++ b/owncloudApp/src/main/res/values-tr/strings.xml
@@ -92,6 +92,7 @@
   <string name="common_unknown">bilinmiyor</string>
   <string name="common_error_unknown">Bilinmeyen hata</string>
   <string name="common_pending">Bekliyor</string>
+  <string name="common_important">Önemli</string>
   <string name="about_title">Hakkında</string>
   <string name="change_password">Parola değiştir</string>
   <string name="delete_account">Hesabı kaldır</string>
@@ -374,6 +375,8 @@
   <string name="share_via_link_expiration_date_label">Bitiş</string>
   <string name="share_via_link_password_label">Parola</string>
   <string name="share_via_link_password_title">Güvenli</string>
+  <string name="share_via_link_edit_permission_read_only_label">İndir / Görüntüle</string>
+  <string name="share_via_link_edit_permission_read_and_write_label">İndir / Görüntüle / Karşı tarafa yükle</string>
   <string name="share_get_public_link_button">Bağlantıyı al</string>
   <string name="share_with_title">Şununla paylaş</string>
   <string name="share_with_edit_title">%1$s ile paylaş</string>
